--- a/product.html
+++ b/product.html
@@ -100,9 +100,6 @@
         </div>
       </div>
     </div>
-    <!-- Modal -->
-
-    <!-- Navbar -->
     <nav class="navbar nav sticky-top" style="background-color: white">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -146,8 +143,6 @@
       <!-- </div> -->
     </nav>
     <!-- Navbar -->
-
-    <!-- Isi -->
     <section>
       <div class="container" style="margin-top: -3.5rem">
         <div class="row d-flex justify-content-center align-self-center margprod">
@@ -318,7 +313,23 @@
           <div class="col-md-4 mb-5" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
             <div class="card">
               <div class="card-img">
-                <img class="tigad" src="img/sabuklaki.png" alt="" />
+                <div class="sketchfab-embed-wrapper">
+                  <iframe
+                    title="Belt"
+                    frameborder="0"
+                    allowfullscreen
+                    mozallowfullscreen="true"
+                    webkitallowfullscreen="true"
+                    allow="autoplay; fullscreen; xr-spatial-tracking"
+                    xr-spatial-tracking
+                    execution-while-out-of-viewport
+                    execution-while-not-rendered
+                    web-share
+                    class="tigad"
+                    src="https://sketchfab.com/models/14c017540bd64fda812557411a24b0d9/embed?autostart=1&camera=0&ui_theme=dark"
+                  >
+                  </iframe>
+                </div>
               </div>
               <div class="card-info text-center">
                 <p class="text-title">Sabuk Kulit Wanita</p>
@@ -354,7 +365,23 @@
           <div class="col-md-4 mb-5" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="150" data-aos-duration="1000" data-aos-mirror="true">
             <div class="card">
               <div class="card-img">
-                <img class="tigad" src="img/celanalak.png" alt="" />
+                <div class="sketchfab-embed-wrapper">
+                  <iframe
+                    title="Leather Pants (Free)"
+                    frameborder="0"
+                    allowfullscreen
+                    mozallowfullscreen="true"
+                    webkitallowfullscreen="true"
+                    allow="autoplay; fullscreen; xr-spatial-tracking"
+                    xr-spatial-tracking
+                    execution-while-out-of-viewport
+                    execution-while-not-rendered
+                    web-share
+                    class="tigad"
+                    src="https://sketchfab.com/models/f3d8e925db784591ad54ce18a27e540d/embed?autostart=1&camera=0&ui_theme=dark"
+                  >
+                  </iframe>
+                </div>
               </div>
               <div class="card-info text-center">
                 <p class="text-title">Celana Kulit Pria</p>
@@ -392,7 +419,23 @@
           <div class="col-md-4 mb-5" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true">
             <div class="card">
               <div class="card-img">
-                <img class="tigad" src="img/celanawan.png" alt="" />
+                <div class="sketchfab-embed-wrapper">
+                  <iframe
+                    title="Crow inspired leather pants"
+                    frameborder="0"
+                    allowfullscreen
+                    mozallowfullscreen="true"
+                    webkitallowfullscreen="true"
+                    allow="autoplay; fullscreen; xr-spatial-tracking"
+                    xr-spatial-tracking
+                    execution-while-out-of-viewport
+                    execution-while-not-rendered
+                    web-share
+                    class="tigad"
+                    src="https://sketchfab.com/models/a739f9a81d4743d1bf8ffaf94bae2c4c/embed?autostart=1&camera=0&ui_theme=dark"
+                  >
+                  </iframe>
+                </div>
               </div>
               <div class="card-info text-center">
                 <p class="text-title">Celana Kulit Wanita</p>
@@ -430,7 +473,23 @@
           <div class="col-md-4 mb-5" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
             <div class="card">
               <div class="card-img">
-                <img class="tigad" src="img/tas123.png" alt="" />
+                <div class="sketchfab-embed-wrapper">
+                  <iframe
+                    title="Leather bag"
+                    frameborder="0"
+                    allowfullscreen
+                    mozallowfullscreen="true"
+                    webkitallowfullscreen="true"
+                    allow="autoplay; fullscreen; xr-spatial-tracking"
+                    xr-spatial-tracking
+                    execution-while-out-of-viewport
+                    execution-while-not-rendered
+                    web-share
+                    class="tigad"
+                    src="https://sketchfab.com/models/be35ef7916324da0950f1ebfadb2aecf/embed?autostart=1&camera=0&ui_infos=0&ui_theme=dark"
+                  >
+                  </iframe>
+                </div>
               </div>
               <div class="card-info text-center">
                 <p class="text-title">Tas Modis Wanita</p>
@@ -459,7 +518,23 @@
           <div class="col-md-4 mb-5" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="150" data-aos-duration="1000" data-aos-mirror="true">
             <div class="card">
               <div class="card-img">
-                <img class="tigad" src="img/tas1234.png" alt="" />
+                <div class="sketchfab-embed-wrapper">
+                  <iframe
+                    title="Leather Bag"
+                    frameborder="0"
+                    allowfullscreen
+                    mozallowfullscreen="true"
+                    webkitallowfullscreen="true"
+                    allow="autoplay; fullscreen; xr-spatial-tracking"
+                    xr-spatial-tracking
+                    execution-while-out-of-viewport
+                    execution-while-not-rendered
+                    web-share
+                    class="tigad"
+                    src="https://sketchfab.com/models/b2502208afcc4eaaa65a254067afe38d/embed?autostart=1&camera=0&ui_theme=dark"
+                  >
+                  </iframe>
+                </div>
               </div>
               <div class="card-info text-center">
                 <p class="text-title">Tas Postman Pria</p>
@@ -488,7 +563,23 @@
           <div class="col-md-4 mb-5" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true">
             <div class="card">
               <div class="card-img">
-                <img class="tigad" src="img/sarungtangan1.png" alt="" />
+                <div class="sketchfab-embed-wrapper">
+                  <iframe
+                    title="Black Leather Glove"
+                    frameborder="0"
+                    allowfullscreen
+                    mozallowfullscreen="true"
+                    webkitallowfullscreen="true"
+                    allow="autoplay; fullscreen; xr-spatial-tracking"
+                    xr-spatial-tracking
+                    execution-while-out-of-viewport
+                    execution-while-not-rendered
+                    web-share
+                    class="tigad"
+                    src="https://sketchfab.com/models/c954a6160ee34548a1b0ea538f3b92dd/embed?autostart=1&camera=0&ui_theme=dark"
+                  >
+                  </iframe>
+                </div>
               </div>
               <div class="card-info text-center">
                 <p class="text-title">Sarung Tangan Motor</p>
@@ -517,8 +608,6 @@
         </div>
       </div>
     </section>
-    <!-- Isi -->
-
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-white text-muted">
       <!-- Section: Social media -->
@@ -618,7 +707,6 @@
       <!-- Copyright -->
     </footer>
     <!-- Footer -->
-
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
