--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-white text-muted">
       <!-- Section: Social media -->
-      <section class="d-flex bg-foot text-white justify-content-center justify-content-lg-between p-4 border-bottom">
+      <section class="d-flex bg-foot text-dark justify-content-center justify-content-lg-between p-4 border-bottom" style="background-color: #ffc0ad">
         <!-- Left -->
         <div class="me-5 d-none d-lg-block">
           <span>Get connected with us on social networks:</span>
@@ -218,16 +218,16 @@
 
         <!-- Right -->
         <div>
-          <a href="" class="me-4 link-light" style="text-decoration: none">
+          <a href="" class="me-4 link-dark" style="text-decoration: none">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="" class="me-4 link-light" style="text-decoration: none">
+          <a href="" class="me-4 link-dark" style="text-decoration: none">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="" class="me-4 link-light" style="text-decoration: none">
+          <a href="" class="me-4 link-dark" style="text-decoration: none">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="" class="me-4 link-light" style="text-decoration: none">
+          <a href="" class="me-4 link-dark" style="text-decoration: none">
             <i class="fab fa-tiktok"></i>
           </a>
         </div>
