--- a/TipsTrick.html
+++ b/TipsTrick.html
@@ -460,7 +460,7 @@
               Tentu sangat disayangkan jika jaket berharga mahal tersebut rusak dalam waktu cepat. Melansir berbagai sumber, berikut beberapa cara merawat jaket kulit agar lebih tahan lama.
             </p>
             <div class="heading" style="margin-left: -8px">
-              <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+              <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><p class="text-start" style="color: #6F4628">Baca Selengkapnya...</p></a>
             </div>
             <div class="pencipta">By <span class="nama-berita">Setiawan</span> 1 days ago</div>
           </div>
@@ -471,12 +471,12 @@
               <div class="berita-image">
                 <img class="foto12" style="border-radius: 15px" src="img/sepatu_rawat.jpg" alt="" />
               </div>
-              <div class="category">Perawatan Sepatu</div>
+              <div class="category" style="color: #6F4628;">Perawatan Sepatu</div>
               <div class="heading">
                 Merawat Sepatu Kulit Mudah dan Cepat
                 <br />
                 <br />
-                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop1" aria-controls="staticBackdrop1"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop1" aria-controls="staticBackdrop1"><p class="text-start" style="color: #6F4628">Baca Selengkapnya...</p></a>
                 <div class="pencipta">By <span class="nama-berita">David</span> 4 days ago</div>
               </div>
             </div>
@@ -486,12 +486,12 @@
               <div class="berita-image">
                 <img class="foto12" style="border-radius: 15px" src="img/bahan_kulit.jpg" alt="" />
               </div>
-              <div class="category">Perawatan Bahan Kulit</div>
+              <div class="category" style="color: #6F4628">Perawatan Bahan Kulit</div>
               <div class="heading">
                 Cara Mengidentifikasi Bahan Kulit Asli
                 <br />
                 <br />
-                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop2" aria-controls="staticBackdrop2"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop2" aria-controls="staticBackdrop2"><p class="text-start" style="color: #6F4628">Baca Selengkapnya...</p></a>
                 <div class="pencipta">By <span class="nama-berita">Arthur</span> 7 days ago</div>
               </div>
             </div>
@@ -501,12 +501,12 @@
               <div class="berita-image">
                 <img class="foto12" style="border-radius: 15px" src="img/jelajah.jpg" alt="" />
               </div>
-              <div class="category">Bahan Tas Kulit</div>
+              <div class="category" style="color: #6F4628">Bahan Tas Kulit</div>
               <div class="heading">
                 Jenis Bahan Tas Kulit yang Banyak Dicari
                 <br />
                 <br />
-                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop3" aria-controls="staticBackdrop3"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop3" aria-controls="staticBackdrop3"><p class="text-start" style="color: #6F4628">Baca Selengkapnya...</p></a>
                 <div class="pencipta">By <span class="nama-berita">Yehezkiel</span> 13 days ago</div>
               </div>
             </div>
@@ -516,12 +516,12 @@
               <div class="berita-image">
                 <img class="foto12" style="border-radius: 15px" src="img/about3.jpg" alt="" />
               </div>
-              <div class="category">Jaket Kulit</div>
+              <div class="category" style="color: #6F4628">Jaket Kulit</div>
               <div class="heading">
                 Cara Memilih Jaket Kulit Berkualitas
                 <br />
                 <br />
-                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop4" aria-controls="staticBackdrop4"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop4" aria-controls="staticBackdrop4"><p class="text-start" style="color: #6F4628">Baca Selengkapnya...</p></a>
                 <div class="pencipta">By <span class="nama-berita">cristianto</span> 23 days ago</div>
               </div>
             </div>
@@ -534,7 +534,7 @@
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-white text-muted">
       <!-- Section: Social media -->
-      <section class="d-flex bg-foot text-white justify-content-center justify-content-lg-between p-4 border-bottom">
+      <section class="d-flex bg-foot text-dark justify-content-center justify-content-lg-between p-4 border-bottom" style="background-color: #ffc0ad">
         <!-- Left -->
         <div class="me-5 d-none d-lg-block">
           <span>Get connected with us on social networks:</span>
@@ -543,16 +543,16 @@
 
         <!-- Right -->
         <div>
-          <a href="" class="me-4 link-light" style="text-decoration: none">
+          <a href="" class="me-4 link-dark" style="text-decoration: none">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="" class="me-4 link-light" style="text-decoration: none">
+          <a href="" class="me-4 link-dark" style="text-decoration: none">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="" class="me-4 link-light" style="text-decoration: none">
+          <a href="" class="me-4 link-dark" style="text-decoration: none">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="" class="me-4 link-light" style="text-decoration: none">
+          <a href="" class="me-4 link-dark" style="text-decoration: none">
             <i class="fab fa-tiktok"></i>
           </a>
         </div>
