--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- AOS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
   </head>
   <body>
     <!-- Modal -->
@@ -670,93 +670,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-5" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
-            <div class="card">
-              <div class="card-img">
-                <img class="tigad" src="img/tas123.png" alt="" data-bs-toggle="modal" data-bs-target="#staticBackdrop7" />
-              </div>
-              <div class="card-info text-center">
-                <p class="text-title">Tas Modis Wanita</p>
-                <p class="text-body kecilbawah">
-                  Bergaya simple namun elegan sehingga tetap menarik walaupun dipadukan dengan gaya apapun. Memiliki kapasitas yang besar sehingga mampu memuat banyak barang sehingga jadi lebih praktis dan aman.
-                </p>
-              </div>
-              <div class="card-footer">
-                <span class="text-title">Rp 166.500</span>
-                <div class="card-button">
-                  <svg class="svg-icon" viewBox="0 0 20 20">
-                    <path
-                      d="M17.72,5.011H8.026c-0.271,0-0.49,0.219-0.49,0.489c0,0.271,0.219,0.489,0.49,0.489h8.962l-1.979,4.773H6.763L4.935,5.343C4.926,5.316,4.897,5.309,4.884,5.286c-0.011-0.024,0-0.051-0.017-0.074C4.833,5.166,4.025,4.081,2.33,3.908C2.068,3.883,1.822,4.075,1.795,4.344C1.767,4.612,1.962,4.853,2.231,4.88c1.143,0.118,1.703,0.738,1.808,0.866l1.91,5.661c0.066,0.199,0.252,0.333,0.463,0.333h8.924c0.116,0,0.22-0.053,0.308-0.128c0.027-0.023,0.042-0.048,0.063-0.076c0.026-0.034,0.063-0.058,0.08-0.099l2.384-5.75c0.062-0.151,0.046-0.323-0.045-0.458C18.036,5.092,17.883,5.011,17.72,5.011z"
-                    ></path>
-                    <path
-                      d="M8.251,12.386c-1.023,0-1.856,0.834-1.856,1.856s0.833,1.853,1.856,1.853c1.021,0,1.853-0.83,1.853-1.853S9.273,12.386,8.251,12.386z M8.251,15.116c-0.484,0-0.877-0.393-0.877-0.874c0-0.484,0.394-0.878,0.877-0.878c0.482,0,0.875,0.394,0.875,0.878C9.126,14.724,8.733,15.116,8.251,15.116z"
-                    ></path>
-                    <path
-                      d="M13.972,12.386c-1.022,0-1.855,0.834-1.855,1.856s0.833,1.853,1.855,1.853s1.854-0.83,1.854-1.853S14.994,12.386,13.972,12.386z M13.972,15.116c-0.484,0-0.878-0.393-0.878-0.874c0-0.484,0.394-0.878,0.878-0.878c0.482,0,0.875,0.394,0.875,0.878C14.847,14.724,14.454,15.116,13.972,15.116z"
-                    ></path>
-                  </svg>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-5" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="150" data-aos-duration="1000" data-aos-mirror="true">
-            <div class="card">
-              <div class="card-img">
-                <img class="tigad" src="img/tas1234.png" alt="" data-bs-toggle="modal" data-bs-target="#staticBackdrop8" />
-              </div>
-              <div class="card-info text-center">
-                <p class="text-title">Tas Postman Pria</p>
-                <p class="text-body kecilbawah">
-                  Tas selempang yang elegant untuk Anda para eksekutif muda atau para pria yang bekerja di kantoran, tas ini menjadi pilihan terbaik karena modelnya yang sangat manly. Bahan dan warna tas memberikan kesan mapan dan berkelas.
-                </p>
-              </div>
-              <div class="card-footer">
-                <span class="text-title">Rp 201.250</span>
-                <div class="card-button">
-                  <svg class="svg-icon" viewBox="0 0 20 20">
-                    <path
-                      d="M17.72,5.011H8.026c-0.271,0-0.49,0.219-0.49,0.489c0,0.271,0.219,0.489,0.49,0.489h8.962l-1.979,4.773H6.763L4.935,5.343C4.926,5.316,4.897,5.309,4.884,5.286c-0.011-0.024,0-0.051-0.017-0.074C4.833,5.166,4.025,4.081,2.33,3.908C2.068,3.883,1.822,4.075,1.795,4.344C1.767,4.612,1.962,4.853,2.231,4.88c1.143,0.118,1.703,0.738,1.808,0.866l1.91,5.661c0.066,0.199,0.252,0.333,0.463,0.333h8.924c0.116,0,0.22-0.053,0.308-0.128c0.027-0.023,0.042-0.048,0.063-0.076c0.026-0.034,0.063-0.058,0.08-0.099l2.384-5.75c0.062-0.151,0.046-0.323-0.045-0.458C18.036,5.092,17.883,5.011,17.72,5.011z"
-                    ></path>
-                    <path
-                      d="M8.251,12.386c-1.023,0-1.856,0.834-1.856,1.856s0.833,1.853,1.856,1.853c1.021,0,1.853-0.83,1.853-1.853S9.273,12.386,8.251,12.386z M8.251,15.116c-0.484,0-0.877-0.393-0.877-0.874c0-0.484,0.394-0.878,0.877-0.878c0.482,0,0.875,0.394,0.875,0.878C9.126,14.724,8.733,15.116,8.251,15.116z"
-                    ></path>
-                    <path
-                      d="M13.972,12.386c-1.022,0-1.855,0.834-1.855,1.856s0.833,1.853,1.855,1.853s1.854-0.83,1.854-1.853S14.994,12.386,13.972,12.386z M13.972,15.116c-0.484,0-0.878-0.393-0.878-0.874c0-0.484,0.394-0.878,0.878-0.878c0.482,0,0.875,0.394,0.875,0.878C14.847,14.724,14.454,15.116,13.972,15.116z"
-                    ></path>
-                  </svg>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-5" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true">
-            <div class="card">
-              <div class="card-img">
-                <img class="tigad" src="img/sarungtangan1.png" alt="" data-bs-toggle="modal" data-bs-target="#staticBackdrop9" />
-              </div>
-              <div class="card-info text-center">
-                <p class="text-title">Sarung Tangan Motor</p>
-                <p class="text-body kecilbawah">
-                  Sarung tangan menutupi seluruh bagian jari, tidak panas, dan kualitas jahitan bagus. Bahan dilengkapi dengan kain anti slip untuk menambah kenyamanan saat berkendara harian ataupun saat touring.
-                </p>
-              </div>
-              <div class="card-footer">
-                <span class="text-title">Rp 53.250</span>
-                <div class="card-button">
-                  <svg class="svg-icon" viewBox="0 0 20 20">
-                    <path
-                      d="M17.72,5.011H8.026c-0.271,0-0.49,0.219-0.49,0.489c0,0.271,0.219,0.489,0.49,0.489h8.962l-1.979,4.773H6.763L4.935,5.343C4.926,5.316,4.897,5.309,4.884,5.286c-0.011-0.024,0-0.051-0.017-0.074C4.833,5.166,4.025,4.081,2.33,3.908C2.068,3.883,1.822,4.075,1.795,4.344C1.767,4.612,1.962,4.853,2.231,4.88c1.143,0.118,1.703,0.738,1.808,0.866l1.91,5.661c0.066,0.199,0.252,0.333,0.463,0.333h8.924c0.116,0,0.22-0.053,0.308-0.128c0.027-0.023,0.042-0.048,0.063-0.076c0.026-0.034,0.063-0.058,0.08-0.099l2.384-5.75c0.062-0.151,0.046-0.323-0.045-0.458C18.036,5.092,17.883,5.011,17.72,5.011z"
-                    ></path>
-                    <path
-                      d="M8.251,12.386c-1.023,0-1.856,0.834-1.856,1.856s0.833,1.853,1.856,1.853c1.021,0,1.853-0.83,1.853-1.853S9.273,12.386,8.251,12.386z M8.251,15.116c-0.484,0-0.877-0.393-0.877-0.874c0-0.484,0.394-0.878,0.877-0.878c0.482,0,0.875,0.394,0.875,0.878C9.126,14.724,8.733,15.116,8.251,15.116z"
-                    ></path>
-                    <path
-                      d="M13.972,12.386c-1.022,0-1.855,0.834-1.855,1.856s0.833,1.853,1.855,1.853s1.854-0.83,1.854-1.853S14.994,12.386,13.972,12.386z M13.972,15.116c-0.484,0-0.878-0.393-0.878-0.874c0-0.484,0.394-0.878,0.878-0.878c0.482,0,0.875,0.394,0.875,0.878C14.847,14.724,14.454,15.116,13.972,15.116z"
-                    ></path>
-                  </svg>
-                </div>
-              </div>
-            </div>
-          </div>
+
         </div>
       </div>
     </section>
@@ -765,7 +679,7 @@
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-white text-muted">
       <!-- Section: Social media -->
-      <section class="d-flex bg-foot text-white justify-content-center justify-content-lg-between p-4 border-bottom">
+      <section class="d-flex bg-foot text-dark justify-content-center justify-content-lg-between p-4 border-bottom" style="background-color: #ffc0ad">
         <!-- Left -->
         <div class="me-5 d-none d-lg-block">
           <span>Get connected with us on social networks:</span>
@@ -774,16 +688,16 @@
 
         <!-- Right -->
         <div>
-          <a href="" class="me-4 link-light" style="text-decoration: none">
+          <a href="" class="me-4 link-dark" style="text-decoration: none">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="" class="me-4 link-light" style="text-decoration: none">
+          <a href="" class="me-4 link-dark" style="text-decoration: none">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="" class="me-4 link-light" style="text-decoration: none">
+          <a href="" class="me-4 link-dark" style="text-decoration: none">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="" class="me-4 link-light" style="text-decoration: none">
+          <a href="" class="me-4 link-dark" style="text-decoration: none">
             <i class="fab fa-tiktok"></i>
           </a>
         </div>
