--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
         d="M0,192L0,320L90,320L90,96L180,96L180,192L270,192L270,256L360,256L360,224L450,224L450,96L540,96L540,256L630,256L630,128L720,128L720,192L810,192L810,32L900,32L900,128L990,128L990,256L1080,256L1080,32L1170,32L1170,256L1260,256L1260,160L1350,160L1350,320L1440,320L1440,0L1350,0L1350,0L1260,0L1260,0L1170,0L1170,0L1080,0L1080,0L990,0L990,0L900,0L900,0L810,0L810,0L720,0L720,0L630,0L630,0L540,0L540,0L450,0L450,0L360,0L360,0L270,0L270,0L180,0L180,0L90,0L90,0L0,0L0,0Z"
       ></path>
     </svg> -->
-    <svg class="wave-top" viewBox="0 0 1200 250" id="wv1" style="margin-top: -6rem">
+    <svg class="wave-top" viewBox="0 0 1200 250" id="wv1">
       <path
         fill-rule="evenodd"
         clip-rule="evenodd"
@@ -622,7 +622,7 @@
             </div>
           </section>
         </div>
-        <div class="col-md-4 my-auto m-auto">
+        <div class="col-md-4 waduh">
           <h1 class="text-center" data-aos="fade-up" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">Testimoni</h1>
           <h4 class="text-center">Ini Adalah testimoni dari beberapa orang mengenai website kami</h4>
         </div>
@@ -773,7 +773,11 @@
             <!-- Grid column -->
             <div class="col-md-2 col-lg-3 col-xl-2 mx-auto mb-4">
               <!-- Content -->
-              <img src="img/logo.png" class="logofoot" alt="" />
+              <img src="img/brunch.png" class="logofoot rounded-5" alt="" />
+              <div style="margin-top: -1rem">
+                <h3 class="text-center text-black">KulitAbdi.co</h3>
+                <p class="text-center text-black" style="font-size: 0.65em">QUALITY • DURABLE • CREATIVE</p>
+              </div>
             </div>
             <!-- Grid column -->
 
@@ -831,7 +835,7 @@
       <!-- Section: Links  -->
 
       <!-- Copyright -->
-      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025)">© 2023 Copyright: <b>KulitAbdi.Co</b></div>
+      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025)">© 2023 Copyright <b>KulitAbdi.Co</b></div>
       <!-- Copyright -->
     </footer>
     <!-- Footer -->
@@ -855,7 +859,7 @@
           buttonColorDark: '#100f2c', // default: '#100f2c'
           buttonColorLight: '#fff', // default: '#fff'
           saveInCookies: false, // default: true,
-          label: '🌓', // default: ''
+          label: '👁', // default: ''
           autoMatchOsTheme: true, // default: true
         };
 
