--- a/about.html
+++ b/about.html
@@ -206,10 +206,11 @@
         </div>
       </div>
     </div>
+
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-white text-muted">
       <!-- Section: Social media -->
-      <section class="d-flex bg-foot text-dark justify-content-center justify-content-lg-between p-4 border-bottom" style="background-color: #ffc0ad">
+      <section class="d-flex text-dark justify-content-center justify-content-lg-between p-4 border-bottom" style="background-color: #ffc0ad">
         <!-- Left -->
         <div class="me-5 d-none d-lg-block">
           <span>Get connected with us on social networks:</span>
@@ -243,7 +244,11 @@
             <!-- Grid column -->
             <div class="col-md-2 col-lg-3 col-xl-2 mx-auto mb-4">
               <!-- Content -->
-              <img src="img/logo.png" class="logofoot" alt="" />
+              <img src="img/brunch.png" class="logofoot rounded-5" alt="" />
+              <div style="margin-top: -1rem">
+                <h3 class="text-center text-black">KulitAbdi.co</h3>
+                <p class="text-center text-black" style="font-size: 0.65em">QUALITY • DURABLE • CREATIVE</p>
+              </div>
             </div>
             <!-- Grid column -->
 
@@ -301,7 +306,7 @@
       <!-- Section: Links  -->
 
       <!-- Copyright -->
-      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025)">© 2023 Copyright: <b>KulitAbdi.Co</b></div>
+      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025)">© 2023 Copyright <b>KulitAbdi.Co</b></div>
       <!-- Copyright -->
     </footer>
     <!-- Footer -->
@@ -324,7 +329,7 @@
           buttonColorDark: '#100f2c', // default: '#100f2c'
           buttonColorLight: '#fff', // default: '#fff'
           saveInCookies: false, // default: true,
-          label: '🌓', // default: ''
+          label: '👁', // default: ''
           autoMatchOsTheme: true, // default: true
         };
 
