--- a/contact.html
+++ b/contact.html
@@ -168,7 +168,7 @@
               </div>
 
               <div class="Description mx-auto mt-2">
-                <img src="img/david2.JPG" class="card-image-inside" alt="" />
+                <img src="img/david2.png" class="card-image-inside" alt="" />
               </div>
 
               <div class="social-media mx-auto">
@@ -219,7 +219,7 @@
               </div>
 
               <div class="Description mx-auto mt-2">
-                <img src="img/arthur.JPG" class="card-image-inside" alt="" />
+                <img src="img/arthur.png" class="card-image-inside" alt="" />
               </div>
 
               <div class="social-media mx-auto">
