--- a/index.html
+++ b/index.html
@@ -569,11 +569,11 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-md-6 my-auto">
-            <h3 class="display-5" data-aos="fade-up" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">Tren Produk Kulit</h3>
+            <h3 class="display-5">Tren Produk Kulit</h3>
             <h5>Beberapa tren terbaru dalam produk fashion berbahan kulit</h5>
           </div>
 
-          <div class="col-md-6" style="margin: auto" data-aos="fade-in" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+          <div class="col-md-6" style="margin: auto">
             <canvas id="myChart"></canvas>
           </div>
         </div>
@@ -609,7 +609,7 @@
             <div class="testimonial-card mt-2 mb-3">
               <div class="card-up aqua-gradient"></div>
               <div class="avatar mx-auto white">
-                <img src="/img/willy.JPG" class="rounded-circle img-fluid" alt="woman avatar" />
+                <img src="img/willy.png" class="rounded-circle img-fluid" alt="Willyandie" />
               </div>
               <div class="card-body text-center">
                 <h4 class="card-title font-weight-bold">Willyandie Saputra</h4>
@@ -623,7 +623,7 @@
           </section>
         </div>
         <div class="col-md-4 waduh">
-          <h1 class="text-center" data-aos="fade-up" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">Testimoni</h1>
+          <h1 class="text-center">Testimoni</h1>
           <h4 class="text-center">Ini Adalah testimoni dari beberapa orang mengenai website kami</h4>
         </div>
         <div class="col-md-4">
@@ -631,7 +631,7 @@
             <div class="testimonial-card mt-2 mb-3">
               <div class="card-up aqua-gradient"></div>
               <div class="avatar mx-auto white">
-                <img src="/img/arthur.JPG" class="rounded-circle img-fluid" alt="woman avatar" />
+                <img src="img/arthur.png" class="rounded-circle img-fluid" alt="Cristianto" />
               </div>
               <div class="card-body text-center">
                 <h4 class="card-title font-weight-bold">Cristianto Tri Arthurito</h4>
@@ -646,94 +646,6 @@
         </div>
       </div>
     </div>
-    <!-- <section class="client pb-5">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-12">
-            <h5 class="display-5" data-aos="fade-up" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">Testimoni</h5>
-          </div>
-        </div>
-
-        
-
-        <div class="row align-items-md-center text-white" data-aos="fade-up" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
-          <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="carousel" data-bs-interval="5000" data-bs-ride="carousel">
-
-              
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <div class="row p-4">
-                    <div class="t-card">
-                      <i class="fa fa-quote-left" aria-hidden="true"></i>
-                      <p class="lh-lg py-2">
-                        KulitAbdi adalah salah satu produk lokal terbaik yang pernah saya temui. KulitAbdi memiliki kualitas produk yang sangat bermutu dan nyaman saat digunakan. Saya yakin perusahaan fashion ini akan menjadi nomor satu di
-                        Indonesia bahkan dunia.
-                      </p>
-                      <i class="fa fa-quote-right" aria-hidden="true"></i><br />
-                    </div>
-                    <div class="row pt-4 d-flex testi-tengah">
-                      <div class="col-sm-2 my-auto">
-                        <img src="img/david2.JPG" class="rounded-circle" style="max-width: 150px; width: 100%" />
-                      </div>
-                      <div class="col-sm-10 text-dark pt-3 my-auto">
-                        <h5><strong>Yehezkiel David Setiawan</strong></h5>
-                        <p class="testimonial_subtitle">
-                          <span>Software Engineer</span><br />
-                          <span>Maranatha Christian University</span>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="row p-4">
-                    <div class="t-card">
-                      <i class="fa fa-quote-left" aria-hidden="true"></i>
-                      <p class="lh-lg py-2">Tidak pernah kecewa dengan produk KulitAbdi. Sudah ada 4 pasang sepatu di rumah dengan berbagai tipe. Sangat nyaman digunakan dengan kualitas terbaik. Proud to be local</p>
-                      <i class="fa fa-quote-right" aria-hidden="true"></i><br />
-                    </div>
-                    <div class="row pt-4 d-flex testi-tengah">
-                      <div class="col-sm-2">
-                        <img src="img/arthur.JPG" class="rounded-circle" style="max-width: 150px; width: 100%" />
-                      </div>
-                      <div class="col-sm-10 text-dark pt-3 my-auto">
-                        <h5><strong>Cristianto Tri Arthurito</strong></h5>
-                        <p class="testimonial_subtitle">
-                          <span>Software Engineer</span><br />
-                          <span>Maranatha Christian University</span>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="row p-4">
-                    <div class="t-card">
-                      <i class="fa fa-quote-left" aria-hidden="true"></i>
-                      <p class="lh-lg py-2">sepatunya bagus, modelnya bagus, cuma lobang buat masukin kakinya kekecilan sehingga susah masuk kakinya. Tetapi KulitAbdi memiliki kualitas bahan yang sangat bagus.</p>
-                      <i class="fa fa-quote-right" aria-hidden="true"></i><br />
-                    </div>
-                    <div class="row pt-4 d-flex testi-tengah">
-                      <div class="col-sm-2">
-                        <img src="img/willy.JPG" class="rounded-circle" style="max-width: 150px; width: 100%" />
-                      </div>
-                      <div class="col-sm-10 text-dark pt-3 my-auto">
-                        <h5><strong>Willyandie Saputra</strong></h5>
-                        <p class="testimonial_subtitle">
-                          <span>Software Engineer</span><br />
-                          <span>Maranatha Christian University</span>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
     <!-- Testimoni -->
 
     <!-- Footer -->
