--- a/product.html
+++ b/product.html
@@ -445,6 +445,9 @@
           <div class="text-center mb-3">
             <h1 class="judulproduk" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Produk Kami</h1>
             <h5 style="color: gray" data-aos="fade-down" data-aos-offset="100" data-aos-delay="100" data-aos-duration="1000" data-aos-mirror="true">Kami menyediakan berbagai busana berbahan kulit yang modis dan nyaman dikenakan</h5>
+            <h4 class="judulproduk" data-aos="fade-down" data-aos-offset="100" data-aos-delay="75" data-aos-duration="1000" data-aos-mirror="true">
+              Kami Menggunakan Teknologi 3D dengan menyentuh gambar untuk menambah kepuasan dan pengalaman berbelanja Anda
+            </h4>
           </div>
           <div class="col-md-4 mb-5" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
             <div class="card">
