--- a/product.html
+++ b/product.html
@@ -716,7 +716,7 @@
             <div class="col-md-2 col-lg-3 col-xl-2 mx-auto mb-4">
               <!-- Content -->
               <img src="img/brunch.png" class="logofoot rounded-5" alt="" />
-              <div style="margin-top: -1rem">
+              <div>
                 <h3 class="text-center text-black">KulitAbdi.co</h3>
                 <p class="text-center text-black" style="font-size: 0.65em">QUALITY • DURABLE • CREATIVE</p>
               </div>
