--- a/index.html
+++ b/index.html
@@ -499,10 +499,10 @@
 
       <div class="container mt-3 pb-5">
         <div class="row align-items-center">
-          <div class="col-sm-4 mb-3 mb-sm-0 tengaheuy" data-aos="zoom-in-up" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
-            <h1>T o k o K a m i</h1>
-            <h3>KulitAbdi.Co</h3>
-            <h6>berada di jantung kota Bandung</h6>
+          <div class="col-sm-4 mb-3 mb-sm-0 tengaheuy yes123" data-aos="zoom-in-up" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+            <h1 class="text-white">T o k o K a m i</h1>
+            <h3 class="text-white">KulitAbdi.Co</h3>
+            <h6 class="text-white">berada di jantung kota Bandung</h6>
           </div>
           <div class="col-sm-8 mb-3 mb-sm-0" data-aos="fade-in" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
@@ -582,33 +582,14 @@
     <!-- Graphic -->
 
     <!-- Testimoni -->
-    <style>
-      .testimonial-card .card-up {
-        height: 120px;
-        overflow: hidden;
-        border-top-left-radius: 0.25rem;
-        border-top-right-radius: 0.25rem;
-      }
 
-      .aqua-gradient {
-        background: linear-gradient(180deg, rgba(178, 128, 83, 1) 0%, rgba(255, 192, 173, 1) 100%); /* background: linear-gradient(40deg, #2096ff, #05ffa3) !important; */
-      }
-
-      .testimonial-card .avatar {
-        width: 120px;
-        margin-top: -60px;
-        overflow: hidden;
-        border: 5px solid #fff;
-        border-radius: 50%;
-      }
-    </style>
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <section class="mx-auto my-5" style="max-width: 23rem; transform: translateY(-3rem)">
+          <div class="mx-auto my-5" style="max-width: 23rem; transform: translateY(-3rem)">
             <div class="testimonial-card mt-2 mb-3">
               <div class="card-up aqua-gradient"></div>
-              <div class="avatar mx-auto white">
+              <div class="avatar mx-auto">
                 <img src="img/willy.png" class="rounded-circle img-fluid" alt="Willyandie" />
               </div>
               <div class="card-body text-center">
@@ -620,18 +601,18 @@
                 </p>
               </div>
             </div>
-          </section>
+          </div>
         </div>
         <div class="col-md-4 waduh">
           <h1 class="text-center">Testimoni</h1>
           <h4 class="text-center">Ini Adalah testimoni dari beberapa orang mengenai website kami</h4>
         </div>
         <div class="col-md-4">
-          <section class="mx-auto my-5" style="max-width: 23rem; transform: translateY(-3rem)">
+          <div class="mx-auto my-5" style="max-width: 23rem; transform: translateY(-3rem)">
             <div class="testimonial-card mt-2 mb-3">
               <div class="card-up aqua-gradient"></div>
-              <div class="avatar mx-auto white">
-                <img src="img/arthur.png" class="rounded-circle img-fluid" alt="Cristianto" />
+              <div class="avatar mx-auto">
+                <img src="img/arthur.png" class="rounded-circle img-fluid" alt="Arthur" />
               </div>
               <div class="card-body text-center">
                 <h4 class="card-title font-weight-bold">Cristianto Tri Arthurito</h4>
@@ -642,7 +623,7 @@
                 </p>
               </div>
             </div>
-          </section>
+          </div>
         </div>
       </div>
     </div>
