--- a/contact.html
+++ b/contact.html
@@ -274,7 +274,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-7 mx-auto justify-content-center">
-            <h1 class="text-center pt-5" data-aos="zoom-in-down" data-aos-duration="500" data-aos-easing="ease-in-out" data-aos-mirror="true">Contact Us</h1>
+            <h1 class="text-center harusnyamah pt-5" data-aos="zoom-in-down" data-aos-duration="500" data-aos-easing="ease-in-out" data-aos-mirror="true">Contact Us</h1>
             <div class="formcontact">
               <form id="myForm" name="CrediTion">
                 <div class="mb-3">
