--- a/contact.html
+++ b/contact.html
@@ -272,8 +272,88 @@
     <!-- Image Overlay -->
     <section class="bg-contact">
       <div class="container">
-        <div class="row mb-5">
-          <div class="col-md-7 mx-auto justify-content-center">
+        <div class="row mb-5 justify-content-center align-items-center d-flex">
+          <div class="col-md-6">
+            <h1 class="text-center harusnyamah pt-5" data-aos="zoom-in-down" data-aos-duration="500" data-aos-easing="ease-in-out" data-aos-mirror="true">Frequently Asked Question</h1>
+            <div class="accordion accordion-flush mt-5" id="accordionFlushExample">
+              <div class="accordion-item my-4 rounded-3">
+                <h2 class="accordion-header" id="flush-headingOne">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    <span class="lalala"><b>Apa itu KulitAbdi.Co</b></span>
+                  </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">KulitAbdi.Co merupakan aplikasi web UMKM yang berasal dari kota Bandung yang menyediakan busana kulit terbaik di dunia. Siapapun dapat langsung berbelanja tanpa ragu dan khawatir.</div>
+                </div>
+              </div>
+              <div class="accordion-item my-4 rounded-3">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    <b>Mengapa fashion kulit sangat cocok untuk semua kalangan?</b>
+                  </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">
+                    Sebagai salah satu material yang terkesan mewah dan berkelas, bahan kulit memang selalu menarik untuk dieksplorasi menjadi pakaian yang memukau. Khusus untuk tahun 2023 ini item fashion berbahan kulit yang diciptakan
+                    dalam berbagai variasi warna bahkan juga bisa diandalkan untuk bergaya. KulitAbdi.Co menawarkan busana kulit yang berkelas namun ramah di dompet.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item my-4 rounded-3">
+                <h2 class="accordion-header" id="flush-headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    <b>Bagaimana cara memesan barang di KulitAbdi.Co?</b>
+                  </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">Anda dapat memesan produk kami melalui halaman produk pada website atau dengan menghubungi kami melalui halaman contact-us.</div>
+                </div>
+              </div>
+              <div class="accordion-item my-4 rounded-3">
+                <h2 class="accordion-header" id="flush-headingFour">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                    <b>Bagaimana cara pembayaran di KulitAbdi.Co</b>
+                  </button>
+                </h2>
+                <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">Anda dapat menggunakan beberapa metode pembayaran seperti kartu kredit, Paypal, Stripe, bahkan menggunakan cyrpto seperti bitcoin.</div>
+                </div>
+              </div>
+              <div class="accordion-item my-4 rounded-3">
+                <h2 class="accordion-header" id="flush-headingFive">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                    <b>Penjelasan halaman produk</b>
+                  </button>
+                </h2>
+                <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">Kami menggunakan beberapa animasi yang menarik. Anda dapat merasakan sensasi 3D dalam melihat produk.</div>
+                </div>
+              </div>
+              <div class="accordion-item my-4 rounded-3">
+                <h2 class="accordion-header" id="flush-headingSix">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+                    <b>Apa perbedaan KulitAbdi.Co dengan Website UMKM lainnya</b>
+                  </button>
+                </h2>
+                <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">
+                    Kami menggunakan fitur animasi 3D untuk menambah kepuasan dan pengalaman konsumen dalam memilih barang. Anda dapat melihat gradasi warna, pencahayaan, tekstur melalui animasi 3D yang kami tawarkan.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item my-4 rounded-3">
+                <h2 class="accordion-header" id="flush-headingSeven">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
+                    <b>Apakah produk KulitAbdi adalah barang asli?</b>
+                  </button>
+                </h2>
+                <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">Semua produk yang kami tawarkan berasal dari bahan dasar kulit asli dan pilihan terbaik. Kami tidak ingin mengecewakan konsumen kami.</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-5 mx-auto justify-content-center">
             <h1 class="text-center harusnyamah pt-5" data-aos="zoom-in-down" data-aos-duration="500" data-aos-easing="ease-in-out" data-aos-mirror="true">Contact Us</h1>
             <div class="formcontact">
               <form id="myForm" name="CrediTion">
